Fix image size on mobile

--- a/assets/styles/project.scss
+++ b/assets/styles/project.scss
@@ -58,6 +58,7 @@
 
 .project-image {
     display: block;
-    width: 500px;
+    width: 100%;
+    max-width: 500px;
     margin: 0 auto;
 }
